<resources>
    <string name="app_name">DeskApplication</string>
    <string name="passwordInputFieldHint">Passwort</string>
    <string name="usernameInputFieldHint">Nutzername</string>
    <string name="loginButtonText">Login</string>
    <string name="appTitleText">HFU Desks</string>
    <string name="reserveDeskButtonText">Desk buchen</string>
    <string name="cancelDeskButtonText">Desk freigeben</string>
    <string name="statisticsButtonText">Statistik</string>
    <string name="backToMainMenuButtonText">Startseite</string>
    <string name="morningRadioButtonText">Vormittag</string>
    <string name="eveningRadioButtonText">Nachmittag</string>
    <string name="weeklyCheckBoxText">Wöchentlich</string>
    <string name="chooseDeskButtonText">Tisch auswählen</string>
    <string name="requestDeskButtonText">Tisch buchen</string>
    <string name="cancelChosenDeskButtonText">Ausgewählten Desk freigeben</string>

    <string name="preference_file_key">SharedPreferenceFileKey</string>
</resources>