<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reserve.PickDateTimeActivity">
    <include
        android:id="@+id/include"
        layout="@layout/app_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="123dp"
        android:layout_height="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView">

        <RadioButton
            android:id="@+id/morningRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/morningRadioButtonText" />

        <RadioButton
            android:id="@+id/eveningRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eveningRadioButtonText" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/weeklyCheckBox"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:text="@string/weeklyCheckBoxText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/chooseDeskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseDeskButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weeklyCheckBox"
        app:layout_constraintVertical_bias="0.287" />

</androidx.constraintlayout.widget.ConstraintLayout>